testsuite/tests/typecheck/should_fail/T15883e.stderr
T15883e.hs:16:1: error: [GHC-91028]
    • Couldn't match expected type ‘forall a. a’ with actual type ‘d0’
      Cannot instantiate unification variable ‘d0’
      with a type involving polytypes: forall a. a
    • In the first argument of ‘z’, namely ‘MkFoo’
      In the first argument of ‘k’, namely ‘z MkFoo’
      In the expression: z MkFoo `k` a1
      When typechecking the code for ‘GHC.Internal.Data.Data.gfoldl’
        in a derived instance for ‘Data (Foo LiftedRep)’:
        To see the code I am typechecking, use -ddump-deriv

T15883e.hs:16:1: error: [GHC-91028]
    • Couldn't match expected type ‘forall a. a’ with actual type ‘b0’
      Cannot instantiate unification variable ‘b0’
      with a type involving polytypes: forall a. a
    • In the first argument of ‘z’, namely ‘MkFoo’
      In the first argument of ‘k’, namely ‘(z MkFoo)’
      In the expression: k (z MkFoo)
      When typechecking the code for ‘GHC.Internal.Data.Data.gunfold’
        in a derived instance for ‘Data (Foo LiftedRep)’:
        To see the code I am typechecking, use -ddump-deriv

